--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h2> segunda branch Teste repositorio 2 arquivos enviando para o github - segundo programador   </h2>
+<h2> terceira branch Teste repositorio 2 arquivos enviando para o github - segundo programador   </h2>
 
